fix motoko playground overflow

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -80,6 +80,7 @@ img {
     }
 
     .listingblock {
+        overflow-x: scroll;
         pre {
             color: green;
             margin: 0;
